--- a/views/teacher/header.ejs
+++ b/views/teacher/header.ejs
@@ -1,23 +1,21 @@
 <div class="container-fluid navbar-expand-lg border">
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#">Home</a>              
+            <a class="navbar-brand" href="#/">Home</a>              
             <div class="collapse navbar-collapse d-flex justify-content-end">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">OPT0</a>
+                        <a class="nav-link" href="#BoardCasting">OPT0</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">OPT1</a>
+                        <a class="nav-link" href="#Notification">OPT1</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">OPT2</a>
+                        <a class="nav-link" href="#OPT2">OPT2</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">OPT3</a>
+                        <a class="nav-link" href="#conferenceRoom">OPT3</a>
                     </li>                   
                 </ul>
             </div>
         </nav>
 </div>
-
-
