--- a/views/teacher/header.ejs
+++ b/views/teacher/header.ejs
@@ -1,21 +1,16 @@
-<div class="container-fluid navbar-expand-lg border">
-        <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#/">Home</a>              
-            <div class="collapse navbar-collapse d-flex justify-content-end">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#BoardCasting">OPT0</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#Notification">OPT1</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#OPT2">OPT2</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#conferenceRoom">OPT3</a>
-                    </li>                   
-                </ul>
+<nav class="navbar navbar-expand-lg bg-light border">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/homeTeacher">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="btn-group" role="group">
+                <button id="StartVB" type="button" class="btn btn-primary">Start VideoBroadcasting</button>
+                <button id="StartSS" type="button" class="btn btn-primary">Start ScreenSharing</button>
             </div>
-        </nav>
-</div>
+            <a class="nav-link" href="/chatroomTeacher">ChatRoom</a>
+        </div>
+    </div>
+</nav>
