--- a/views/teacher/home.ejs
+++ b/views/teacher/home.ejs
@@ -1,31 +1,29 @@
-<div class="row" style="height:100%;">
-    <div class="col-md-4">
-        <div class="row" style="height:100%">
-            <div class="col-md-12 bg-light border">
-                Video
-            </div>                                
-            <div class="col-md-12 bg-light border">
-                Chat room
+
+<div class="container-fluid">
+    <div class="row" style="position:relative;">
+        <div class="col-md-4 border">
+            <div id="videoconference" style="height:50%" class="border mt-2"></div>
+            
+            <ul class="nav flex-column nav-pills" role="tablist" aria-orientation="vertical">
+                <li class="nav-item">
+                    <a class="nav-link" href="#whiteboard">white board</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#screensharing">screen sharing</a>
+                </li>
+            </ul>
+                       
+
+        </div>
+        <div class="col-md-8 border" style="height:545px;overflow:scroll;">
+            <div id="whiteboard" style="background-color:blue;height:545px;">
+                <h1>White Board</h1>
             </div>
-        </div>            
-    </div>  
-           
-    <div class="col-md-8 bg-light border">            
-        <div class="dropdown mt-3">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                New
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#Action" onclick="fa()">Action</a>
-                <a class="dropdown-item" href="#AnotherAction">Another action</a>
-                <a class="dropdown-item" href="#Something" >Something else here</a>
+            <div id="screensharing" style="background-color:red;height:545px;">
+                <div class="container-fluid" style="height:70px;">
+                    <h1>ScreenSharing</h1>
+                </div>
             </div>
         </div>        
-        <div id="SSS" class="border bg-white" style="height:520px;">
-            <p id="SS">{{data}}<p>
-        </div>
-    </div>              
+    </div>
 </div>
-
-
-    
