--- a/views/student/ConferenceRoom.ejs
+++ b/views/student/ConferenceRoom.ejs
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="css/getHTMLMediaElement.css">        
     </head>
     <body>
-        <header><% include header2%></header>
+        <header><% include header%></header>
         <div id="ConferenceRoom" class="container-fluid bg-light" style="height:545px;">
 
         </div>
@@ -25,8 +25,8 @@
         <script src="/socket.io/socket.io.js"></script>
 
         <script>
-            document.getElementById('StartVB').onclick = function(){
-                connection_3.open('VConferencing', function(){
+            document.getElementById('Notifi').onclick = function(){
+                connection_3.join('VConferencing', function() {
                     console.log(connection_3.sessionid);
                 });
             }
