--- a/views/teacher/home.ejs
+++ b/views/teacher/home.ejs
@@ -1,31 +1,21 @@
-<div class="row" style="height:100%;">
-    <div class="col-md-4">
-        <div class="row" style="height:100%">
-            <div class="col-md-12 bg-light border">
-                Video
-            </div>                                
-            <div class="col-md-12 bg-light border">
-                Chat room
-            </div>
-        </div>            
-    </div>  
-           
-    <div class="col-md-8 bg-light border">            
-        <div class="dropdown mt-3">
-            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                New
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#Action" onclick="fa()">Action</a>
-                <a class="dropdown-item" href="#AnotherAction">Another action</a>
-                <a class="dropdown-item" href="#Something" >Something else here</a>
-            </div>
-        </div>        
-        <div id="SSS" class="border bg-white" style="height:520px;">
-            <p id="SS">{{data}}<p>
+<div class="container-fluid">
+    <div class="row" style="height:545px;">        
+        <div class="col-md-4 border border">
+            <div id="videos-container" class="border" style="height:50%;"></div>
+            <div class="border" style="height:50%;width:100%">B</div>
         </div>
-    </div>              
+        <div class="col-md-8 border">
+                <div class="dropdown">
+                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Dropdown button
+                        </button>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                          <a id="ScreenSharing" class="dropdown-item" href="#">Screen Sharing</a>
+                          <a class="dropdown-item" href="#">Another action</a>
+                          <a class="dropdown-item" href="#">Something else here</a>
+                        </div>
+                      </div>
+            <div id="dashboard" class="container border" style="height:93%;"></div>
+        </div>        
+    </div>
 </div>
-
-
-    
