--- a/views/teacher/index.ejs
+++ b/views/teacher/index.ejs
@@ -1,11 +1,13 @@
 <!Doctype html>
 <html>
     <head>
-        <link rel="stylesheet" href="bootstrap.min.css">        
+        <link rel="stylesheet" href="bootstrap.min.css">   
+        <link rel="stylesheet" href="css/getHTMLMediaElement.css">             
     </head>
     <body>        
-        
-        
+        <header><% include header%></header>
+        <div><% include home%></div>
+        <footer><% include footer%></footer>
         
         <script src="jquery.min.js"></script>                
         <script src="popper.min.js"></script>
@@ -13,12 +15,33 @@
                       
         <script src="RTCMultiConnection.js"></script>
         <script src="main.js"></script>
-        
+                
+        <script src="js/getHTMLMediaElement.js"></script>
+
         <script src="VideoBroadCasting.js"></script>
         <script src="adapter.js"></script>
         <script src="ScreenSharing.js"></script>
         <script src="getScreenId.js"></script>
         <script src="/socket.io/socket.io.js"></script>   
      
+
+        <script>
+            document.getElementById('StartRecording').onclick = function() {    
+                // document.getElementById('open-room').disabled = true;
+                connection.open('VBCasting', function() {
+                    console.log("VBCasting");
+                });    
+            };
+        </script>            
+
+        <script>
+            document.getElementById('ScreenSharing').onclick = function(){
+                connection_2.open('SSharing', function() {
+                    // showRoomURL(connection_2.sessionid);
+                    console.log(connection_2.sessionid);       
+                });
+            };
+        </script>
+        
     </body>
 </html>
