Semi-Final Version

--- a/views/teacher/home.ejs
+++ b/views/teacher/home.ejs
@@ -1,14 +1,11 @@
 
 <div class="container-fluid">
     <div class="row" style="position:relative;">
-        <div class="col-md-4 border">
-            <div id="videoconference" style="height:50%" class="border mt-2"></div>                                
+        <div class="col-md-4 bg-light">
+            <div id="videoconference" style="height:50%" class="mt-2 bg-white border"></div>                                
         </div>
-        <div class="col-md-8 border" style="height:545px;overflow:scroll;">           
-            <div id="screensharing" style="background-color:red;height:545px;">
-                <div class="container-fluid" style="height:70px;">
-                    <h1>ScreenSharing</h1>
-                </div>
+        <div class="col-md-8 bg-light" style="height:545px;">           
+            <div id="screensharing"  class="bg-white my-2" style="height:530px;">               
             </div>
         </div>        
     </div>
