--- a/views/student/header2.ejs
+++ b/views/student/header2.ejs
@@ -7,8 +7,7 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="btn-group" role="group">
-                <button id="StartVB" type="button" class="btn btn-primary">Join VideoBroadcasting</button>
-                <button id="StartSS" type="button" class="btn btn-primary">ScreenSharing</button>
+                <button id="StartVB" type="button" class="btn btn-primary">Join conferencing</button>                
             </div>
             <a class="nav-link" href="/chatroomStudent">ChatRoom</a>
         </div>
