--- a/views/teacher/header.ejs
+++ b/views/teacher/header.ejs
@@ -9,6 +9,7 @@
             <div class="btn-group" role="group">
                 <button id="StartVB" type="button" class="btn btn-primary">Start VideoBroadcasting</button>
                 <button id="StartSS" type="button" class="btn btn-primary">Start ScreenSharing</button>
+                <button id="DisCon" type="button" class="btn btn-primary">Disconnect</button>
             </div>
             <a class="nav-link" href="/chatroomTeacher">ChatRoom</a>
         </div>
