--- a/views/teacher/index.ejs
+++ b/views/teacher/index.ejs
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="bootstrap.min.css">   
-        <link rel="stylesheet" href="css/getHTMLMediaElement.css">        
+        <link rel="stylesheet" href="css/getHTMLMediaElement.css">    
+        
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
         <script src="jquery.min.js"></script>                
         <script src="popper.min.js"></script>
         <script src="bootstrap.min.js"></script>                        
@@ -40,12 +43,18 @@
 
         <script>
             document.getElementById('StartSS').onclick = function(){
-                connection_2.open('SSharing', function() {
+                connection_2.openOrJoin('SSharing', function() {
                     // showRoomURL(connection_2.sessionid);
                     console.log(connection_2.sessionid);       
                 });
             };
-        </script>                                          
+        </script>                                       
+        
+        <script>
+            document.getElementById('DisCon').onclick = function(){
+                connection.closeSocket();
+            }
+        </script>
         
     </body>
 </html>
