--- a/views/student/ConferenceRoom.ejs
+++ b/views/student/ConferenceRoom.ejs
@@ -2,7 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="css/getHTMLMediaElement.css">        
+        <link rel="stylesheet" href="css/getHTMLMediaElement.css">
+        <link rel="stylesheet" 
+        href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
+        crossorigin="anonymous">
     </head>
     <body>
         <header><% include header2%></header>
