--- a/views/student/header.ejs
+++ b/views/student/header.ejs
@@ -1,16 +1,27 @@
 <nav class="navbar navbar-expand-lg bg-light border">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/homeStudent">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/homeStudent"><i class='fas fa-home'></i></a>
+        <button class="navbar-toggler" type="button" 
+        data-toggle="collapse" data-target="#navbarSupportedContent" 
+        aria-controls="navbarSupportedContent" aria-expanded="false" 
+        aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="btn-group" role="group">
-                <button id="StartVB" type="button" class="btn btn-primary">Join VideoBroadcasting</button>
-                <button id="StartSS" type="button" class="btn btn-primary">ScreenSharing</button>
+                <button id="StartVB" type="button" class="btn btn-primary">
+                    <i class='fas fa-chalkboard-teacher'></i>
+                </button>
+                <button id="StartSS" type="button" class="btn btn-primary">
+                    <i class='fas fa-tv'></i>
+                </button>
+                <button id="StopSS" type="button" class="btn btn-light" style="display:none;">
+                    <i class='fas fa-stop-circle' style="color:red;"></i>
+                </button> 
             </div>
-            <a class="nav-link" href="/chatroomStudent">ChatRoom</a>
+            <a class="nav-link" href="/chatroomStudent">
+                <i class='fas fa-comments'></i>
+            </a>
         </div>
     </div>
 </nav>
