--- a/views/student/index.ejs
+++ b/views/student/index.ejs
@@ -6,7 +6,10 @@
         <link rel="stylesheet" href="bootstrap.min.css">   
         <link rel="stylesheet" href="css/getHTMLMediaElement.css">    
         
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+        <link rel="stylesheet" 
+        href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
+        crossorigin="anonymous">
 
         <script src="jquery.min.js"></script>                
         <script src="popper.min.js"></script>
@@ -46,8 +49,16 @@
                     // showRoomURL(connection_2.sessionid);
                     console.log(connection_2.sessionid);       
                 });
+                document.getElementById('StopSS').style.display = 'block';
+                document.getElementById('StartSS').style.display = 'none';
             };
         </script>                                          
-        
+        <script>
+            document.getElementById('StopSS').onclick = function(){
+                document.getElementById('StartSS').style.display = 'block';
+                document.getElementById('StopSS').style.display = 'none';
+                connection_2.closeSocket();
+            }
+        </script>
     </body>
 </html>
