--- a/views/teacher/ConferenceRoom.ejs
+++ b/views/teacher/ConferenceRoom.ejs
@@ -2,7 +2,11 @@
 <html>
     <head>
         <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="css/getHTMLMediaElement.css">        
+        <link rel="stylesheet" href="css/getHTMLMediaElement.css">
+        <link rel="stylesheet" 
+        href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" 
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" 
+        crossorigin="anonymous">        
     </head>
     <body>
         <header><% include header2%></header>
@@ -29,6 +33,23 @@
                 connection_3.open('VConferencing', function(){
                     console.log(connection_3.sessionid);
                 });
+                document.getElementById('StartVB').style.display = 'none';
+                document.getElementById('DisCon').style.display = 'block';
+            }
+        </script>
+
+        <script>
+            document.getElementById('DisCon').onclick = function(){                
+                connection_3.closeSocket();
+                document.getElementById('StartVB').style.display = 'block';
+                document.getElementById('DisCon').style.display = 'none';
+
+                var childNum = document.getElementById('ConferenceRoom').childNodes.length;
+                var list = document.getElementById('ConferenceRoom');
+                var i;
+                for (i=0; i< childNum-1; i++){
+                    list.removeChild(list.childNodes[i]);
+                }
             }
         </script>
 
