--- a/views/teacher/header.ejs
+++ b/views/teacher/header.ejs
@@ -1,17 +1,28 @@
 <nav class="navbar navbar-expand-lg bg-light border">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/homeTeacher">Home</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <a class="navbar-brand" href="/homeTeacher"><i class='fas fa-home'></i></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" 
+        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
+        aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="btn-group" role="group">
-                <button id="StartVB" type="button" class="btn btn-primary">Start VideoBroadcasting</button>
-                <button id="StartSS" type="button" class="btn btn-primary">Start ScreenSharing</button>
-                <button id="DisCon" type="button" class="btn btn-primary">Disconnect</button>
+                <button id="StartVB" type="button" class="btn btn-primary">
+                    <i class='fas fa-video'></i>
+                </button>
+                <button id="DisCon" type="button" class="btn btn-light" style="display:none;">
+                    <i class='fas fa-video-slash' style="color:red;"></i>
+                </button>
+                <button id="StartSS" type="button" class="btn btn-primary">
+                    <i class='fas fa-tv'></i>
+                </button>  
+                <button id="StopSS" type="button" class="btn btn-light" style="display:none;">
+                    <i class='fas fa-stop-circle' style="color:red;"></i>
+                </button>              
             </div>
-            <a class="nav-link" href="/chatroomTeacher">ChatRoom</a>
+            <a class="nav-link" href="/chatroomTeacher"><i class='fas fa-comments'></i></a>
         </div>
     </div>
 </nav>
