--- a/views/teacher/header2.ejs
+++ b/views/teacher/header2.ejs
@@ -1,15 +1,19 @@
 <nav class="navbar navbar-expand-lg bg-light border">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/homeTeacher">Home</a>
+        <a class="navbar-brand" href="/homeTeacher"><i class='fas fa-home'></i></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="btn-group" role="group">
-                <button id="StartVB" type="button" class="btn btn-primary">Video conferencing</button>                
-            </div>
-            <a class="nav-link" href="/chatroomTeacher">ChatRoom</a>
+                <button id="StartVB" type="button" class="btn btn-primary">
+                    <i class='fas fa-video'></i>
+                </button>
+                <button id="DisCon" type="button" class="btn btn-light" style="display:none;">
+                        <i class='fas fa-video-slash' style="color:red;"></i>
+                </button>                
+            </div>            
         </div>
     </div>
 </nav>
